--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,13 +1,54 @@
-.preloader {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: #eee;
-	
-	position: fixed;
-	z-index: 100;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;	
+div.m-app-loading {
+	position: fixed ;
 }
+div.m-app-loading div.animated-container {
+	background-image: url('../images/simple.jpg');
+	bottom: 0px ;
+	left: 0px ;
+	opacity: 1.0 ;
+	position: fixed ;
+	right: 0px ;
+	top: 0px ;
+	z-index: 999999 ;
+}
+/* Used to initialize the ng-leave animation state. */
+div.m-app-loading div.animated-container.ng-leave {
+	opacity: 1.0 ;
+	transition: all linear 200ms ;
+		-webkit-transition: all linear 200ms ;
+}
+/* Used to set the end properties of the ng-leave animation state. */
+div.m-app-loading div.animated-container.ng-leave-active {
+	opacity: 0 ;
+}
+div.m-app-loading div.messaging {
+	color: #FFFFFF ;
+	font-family: monospace ;
+	left: 0px ;
+	margin-top: -37px ;
+	position: absolute ;
+	right: 0px ;
+	text-align: center ;
+	top: 50% ;
+}
+div.m-app-loading h1 {
+	font-size: 26px ;
+	line-height: 35px ;
+	margin: 0px 0px 20px 0px ;
+}
+div.m-app-loading p {
+	font-size: 18px ;
+	line-height: 14px ;
+	margin: 0px 0px 0px 0px ;
+}
+.card .card-action a{
+	color:#00796b !important;
+}
+@media (min-width: 700px) { 
+	.row{
+
+		max-width: 800px;
+		
+		
+	}
+ }
